raffia/tests/error/scss/at-rule/include/missing-arglist.snap
---
source: raffia/tests/error.rs
---
error: expect token `(`, but found `{`
  ┌─ missing-arglist.scss:1:22
  │
1 │ @include mixin using {}
  │                      ^


